<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editar_eliminar_saber">

    <Button
        android:id="@+id/EliminarSaber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="-2dp"
        android:text="@string/btn_delete" />

    <Button
        android:id="@+id/SelectSaber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="-1dp"
        android:layout_toStartOf="@+id/EliminarSaber"
        android:layout_toEndOf="@+id/ActualizarSaber"
        android:text="@string/btn_select_saber" />

    <Button
        android:id="@+id/ActualizarSaber"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="0dp"
        android:text="@string/btn_update" />

    <ImageView
        android:id="@+id/ImagenSaber"
        android:layout_width="411dp"
        android:layout_height="221dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-2dp"
        android:layout_marginBottom="53dp"
        app:srcCompat="?attr/panelBackground" />

    <EditText
        android:id="@+id/TemaSaber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginBottom="282dp"
        android:ems="10"
        android:hint="@string/hint_tematicas"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="317dp" />

    <VideoView
        android:id="@+id/VideoAudioSaber"
        android:layout_width="410dp"
        android:layout_height="226dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="50dp" />

    <EditText
        android:id="@+id/DescripcionSaber"
        android:layout_width="408dp"
        android:layout_height="96dp"
        android:layout_below="@+id/NombreSaber"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_descripcion"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="56dp" />

    <RadioGroup
        android:layout_width="279dp"
        android:layout_height="49dp"
        android:layout_below="@+id/DescripcionSaber"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="132dp">

        <RadioButton
            android:id="@+id/Rsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_si" />

        <RadioButton
            android:id="@+id/Rno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_no" />
    </RadioGroup>

    <EditText
        android:id="@+id/NombreSaber"
        android:layout_width="412dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:hint="@string/hint_titlulo"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/spTA"
        android:layout_width="408dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="354dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="340dp"
        android:entries="@array/tipos"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck"
        tools:layout_editor_absoluteY="293dp" />

    <Spinner
        android:id="@+id/spNP"
        android:layout_width="409dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="259dp"
        android:layout_marginEnd="-1dp"
        android:entries="@array/NacionesPueblos"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="214dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="255dp"
        android:layout_height="25dp"
        android:layout_below="@+id/textView12"
        android:layout_alignParentStart="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="29dp"
        android:text="@string/titulo_nacPue"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="254dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spNP"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="386dp"
        android:text="@string/titulo_tipo"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="147dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DescripcionSaber"
        android:layout_alignParentStart="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:text="@string/titulo_publicar"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</RelativeLayout>