<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Listar_Saberes">

    <ListView
        android:id="@+id/Saberes"
        android:layout_width="match_parent"
        android:layout_height="604dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="55dp"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="114dp" />

    <EditText
        android:id="@+id/tituloSaber"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="116dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="true"
        android:ems="10"
        android:hint="@string/hint_busqueda"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <ImageButton
        android:id="@+id/AgregarSaber"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/desc_btn_nuevo"
        android:minHeight="48dp"
        app:srcCompat="@drawable/add_box"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/BotonAyuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="355dp"
        android:contentDescription="@string/desc_btn_ayuda"
        android:minHeight="48dp"
        app:srcCompat="@drawable/help_box"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/mainnavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="1dp"
        app:menu="@menu/navegacion_menu" />

</RelativeLayout>